Fixed a few minor CSS issues
Our code block text was too small and we had some weird margin
issues on our body tag that was adding spacing around the body
when we didn't want that

--- a/source/stylesheets/components/_highlight.scss
+++ b/source/stylesheets/components/_highlight.scss
@@ -32,6 +32,7 @@
 
   pre {
     margin: 0;
+    font-size: 1.2em;
   }
 
   table {
