--- a/source/stylesheets/components/_layout.scss
+++ b/source/stylesheets/components/_layout.scss
@@ -1,5 +1,6 @@
 body {
   background-color: $base-background-color;
+  margin: 0;
 }
 
 main {
